data/derived/fa15/progs/unify/prog0867.ml.out
Characters 37-42:
  let rec build (rand, depth) = rand + build;;
                                       ^^^^^
Error: This expression has type int * 'a -> 'b
       but an expression was expected of type int
